--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "mongoose": "^8.1.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.9"
   }
 }
